Harden old Forge runtime staging